Search Results Styling
- match padding of search input
- result label right margin with inline-block

--- a/source/css/modules/search.styl
+++ b/source/css/modules/search.styl
@@ -83,7 +83,7 @@
 .search__result-item
   display flex
   text-decoration none
-  padding 1px 0 4px 5px
+  padding 0 15px
   background white
   border 1.5px solid $border
   border-top none
@@ -96,6 +96,7 @@
     background #f7f4f4
 
   strong
+    display inline-block
     margin-right 5px
     white-space nowrap
     max-width 60%
