various fixes and refactors

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -81,6 +81,12 @@ path
   fill-opacity 0.1
   stroke-width 1.5
 
+.region-west-africa__country
+  fill-opacity 0.1
+  
+  &:hover
+    fill-opacity 0.2
+
 .region-central-africa__country,
 .region-central-africa__stratum
   stroke $central-africa
@@ -88,6 +94,12 @@ path
   stroke-opacity 1
   fill-opacity 0.1
   stroke-width 1.5
+
+.region-central-africa__country
+  fill-opacity 0.1
+  
+  &:hover
+    fill-opacity 0.2
 
 .region-southern-africa__country,
 .region-southern-africa__stratum
@@ -97,6 +109,13 @@ path
   fill-opacity 0.1
   stroke-width 1.5
 
+.region-southern-africa__country
+  fill-opacity 0.1
+  
+  &:hover
+    fill-opacity 0.2
+
+
 .region-eastern-africa__country,
 .region-eastern-africa__stratum
   stroke $eastern-africa
@@ -104,3 +123,9 @@ path
   stroke-opacity 1
   fill-opacity 0.1
   stroke-width 1.5
+
+.region-eastern-africa__country
+  fill-opacity 0.1
+  
+  &:hover
+    fill-opacity 0.2
