added causes of change to summary

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -6,6 +6,9 @@
     border-top 0
   th:not(:first-child), td:not(:first-child)
     text-align right
+    
+  &--causes-of-change
+    margin-top: 30px
 
 .subgeography-totals__subgeography-name
   font-weight 700
@@ -24,3 +27,4 @@
   font-weight bold
   border-bottom 0 !important
   border-top 1px solid black !important
+
