--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -178,6 +178,10 @@ aside table
       text-decoration none
       padding 3px 7px
 
+.sidebar__count-summary
+  &--causes-of-change
+    margin-top 30px
+
 .sidebar__table-container
   border-bottom 2px solid #dcdcdc
   h3
