--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -28,6 +28,7 @@ $hover-fill-opacity = 0.85
   text-transform uppercase
   letter-spacing 3px
   -webkit-font-smoothing antialiased
+  pointer-events none
 
 .mapsvg
   stroke-opacity $stroke-opacity
