--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -5,7 +5,7 @@ $hover-fill-opacity = 0.85
 .leaflet-container
   width 100%
   height 100%
-
+  
 .leaflet-control-container
   position relative
   z-index 1
@@ -88,7 +88,6 @@ path
   
   &:hover
     fill-opacity 0.2
-    stroke-opacity 1
 
 .region-central-africa__country,
 .region-central-africa__stratum
@@ -100,6 +99,7 @@ path
 
 .region-central-africa__country
   fill-opacity 0.1
+  stroke-opacity 0
   
   &:hover
     fill-opacity 0.2
@@ -114,6 +114,7 @@ path
 
 .region-southern-africa__country
   fill-opacity 0.1
+  stroke-opacity 0
   
   &:hover
     fill-opacity 0.2
@@ -126,15 +127,21 @@ path
   stroke-opacity 1
   fill-opacity 0.1
   stroke-width 1.5
+  
+  &:hover
+    fill-opacity 0.2
 
 .region-eastern-africa__country
   fill-opacity 0.1
+  stroke-opacity 0
   
   &:hover
     fill-opacity 0.2  
     
 .border
+  stroke-width 0
   fill-opacity 0
+  pointer-events none
   
 .border--eastern-africa.border--region
   stroke $eastern-africa
@@ -165,4 +172,25 @@ path
   fill-opacity 0
   stroke-width 3
   pointer-events none
+
+.border--country.region--central-africa
+  stroke $central-africa
+  fill $central-africa
+  fill-opacity 0.05
+
+.border--country.region--southern-africa
+  stroke $southern-africa
+  fill $southern-africa
+  fill-opacity 0.05
+
+.border--country.region--eastern-africa
+  stroke $eastern-africa
+  fill $eastern-africa
+  fill-opacity 0.05
+  
+.border--country.region--west-africa
+  stroke $west-africa
+  fill $west-africa
+  fill-opacity 0.05
+
 
