misc map design fixes and search box fix

--- a/source/css/modules/color.styl
+++ b/source/css/modules/color.styl
@@ -12,12 +12,24 @@
 
 .color--region-southern-africa
   color $southern-africa
+  
+  .search__result-item &
+  	transition 300ms ease color, 300ms ease text-decoration
 
 .color--region-eastern-africa
   color $eastern-africa
+  
+  .search__result-item &
+  	transition 300ms ease color, 300ms ease text-decoration
 
 .color--region-central-africa
   color $central-africa
+  
+  .search__result-item &
+  	transition 300ms ease color, 300ms ease text-decoration
 
 .color--region-west-africa
   color $west-africa
+  
+  .search__result-item &
+  	transition 300ms ease color, 300ms ease text-decoration
