--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -7,6 +7,8 @@ aside
   transition width 250ms
   position relative
   z-index 2
+  height 100%
+  overflow hidden
   &.closed
     width 0%
     display none
@@ -28,7 +30,7 @@ aside table
     text-align left
 
 .sidebar__inner
-  padding 20px 40px
+  padding 20px 40px 80px
   background #fff
   -webkit-font-smoothing antialiased
   position relative
