narrative arrow fix

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -228,6 +228,11 @@ aside table
       right 10px
       top 5%
       transform rotate(90deg)
+  
+  &.open
+    h3
+      &:after
+        transform rotate(-90deg)
 
   &.closed div
     height 0
