adjacent geography functionality and stratum bounds update

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -75,6 +75,16 @@ path
     &:hover
       stroke darken($southern-africa, 20%)
 
+.adjacent
+  stroke $west-africa
+  fill-opacity 0.1
+  stroke-opacity 0
+  stroke-width 1.5
+  
+  &:hover
+    fill-opacity 0.2
+    stroke-opacity 1
+
 .region-west-africa__country,
 .region-west-africa__stratum
   stroke $west-africa
