adjacent color refinements

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -76,7 +76,8 @@ path
       stroke darken($southern-africa, 20%)
 
 .adjacent
-  stroke $west-africa
+  stroke #b5b5b5
+  fill #b1b1b1
   fill-opacity 0.1
   stroke-opacity 0
   stroke-width 1.5
