move eastern africa label over a bit

--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -16,6 +16,9 @@ $hover-fill-opacity = 0.85
 .leaflet-marker-icon
   position relative
 
+.leaflet-marker-icon.eastern-africa
+  margin-left 1.5em !important
+
 .leaflet-marker-icon__label
   width 200px
   text-align center
