add new color variables

--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -7,8 +7,11 @@ $brand-dark = #322F30
 $text-light = #848585
 $text-light-2 = #A1A2A2
 
-$nav-margin = 40px
+$white = #ffffff
+$gray-lightest = #f2f2f2
+$gray-light = #dddddd
 
+$nav-margin = 40px
 
 $west-africa = #7163f0
 $eastern-africa = #ed7071
