--- a/source/css/modules/breadcrumb-nav.styl
+++ b/source/css/modules/breadcrumb-nav.styl
@@ -1,23 +1,29 @@
 .breadcrumb-nav
+  -webkit-box-shadow 2px 0px 5px rgba(0, 0, 0, 0.08)
+  -moz-box-shadow 2px 0px 5px rgba(0, 0, 0, 0.08)
+  box-shadow 2px 0px 5px rgba(0, 0, 0, 0.08)
   position absolute
   top 0
   left 0
   background white
-  padding 0 50px
+  padding 0 0.5em
   z-index 2
   width 100%
   overflow hidden
-  border-bottom 1px solid rgba(black, .25)
 
 .breadcrumb-nav__link
-  padding 15px
+  border-bottom 1px solid transparent
+  padding 12px
   display block
   text-decoration none
   text-transform uppercase
   color rgba(black, .5)
-  font-size 14px
+  font-size 0.8em
   font-weight bold
   letter-spacing 0.1em
+  &:hover
+    border-bottom 1px solid $light-gray
+    transition border-color 0.05s
 
 .breadcrumb-nav__link,
 .breadcrumb-nav__separator
