update nav styles

--- a/source/css/modules/nav.styl
+++ b/source/css/modules/nav.styl
@@ -36,12 +36,12 @@
   position fixed
   top 10px
   right 0
-  padding 10px 15px
-  color #e3e3e3
+  padding 6px 15px
+  color $white
   cursor pointer
   &.closed
     background $brand-dark-md
-    border-radius 6px 0 0 6px
+    border-radius 3px 0 0 3px
   &.open
     background none
 
