--- a/source/css/modules/total_count.styl
+++ b/source/css/modules/total_count.styl
@@ -12,7 +12,7 @@
   small
     display block
     text-transform uppercase
-    letter-spacing 1px
+    letter-spacing 0.15em
     color #666
     font-size 11px
     font-family 'acumin-pro', Helvetica, sans-serif
