update typography styles

--- a/source/css/modules/typography.styl
+++ b/source/css/modules/typography.styl
@@ -10,13 +10,13 @@ body
 
 .small-heading
   text-transform uppercase
-  letter-spacing 1px
+  letter-spacing 0.15em
   font-size 12px
 
 .small-current
   font-weight 700
-  border-bottom 1px solid
-  padding-bottom 2px
+  border-bottom 1px solid $white
+  padding-bottom 4px
 
 .indented
   text-indent 1em
@@ -34,3 +34,11 @@ h3 small
   color $text-light
   font-weight 400
   font-size 88%
+
+.heading__small
+  border-bottom 1px solid $gray-light
+  color $text-light
+  font-size 11px
+  letter-spacing 0.15em
+  margin-bottom 0.25em
+  padding-bottom 0.5em
