change brand dark md color

--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -1,7 +1,7 @@
 $border = #dedede
 $border-md = #C7CACB
 
-$brand-dark-md = #615E5F
+$brand-dark-md = #555555
 $brand-dark = #322F30
 
 $text-light = #848585
