--- a/source/css/modules/help_nav.styl
+++ b/source/css/modules/help_nav.styl
@@ -1,16 +1,21 @@
 .help-nav
   position absolute
-  bottom 35px
+  bottom 20px
   right 15px
   font-weight bold
-  border 2px solid $border-md
-  padding 7px 11px 4px 10px
+  padding 10px 14px 7px 13px
   border-radius 50%
   line-height 1
   text-align center
   font-size 20px
-  background #fff
-  color $text-light-2
+  background #fff url(/images/icon-about.svg) no-repeat 50% 50%
+  background-size 32%
+  -moz-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
+  -webkit-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
+  -o-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
+  -ms-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
+  box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
+  color transparent
   text-decoration none
 
 .secondary-nav
