update leaflet zoom bar styles

--- a/source/css/modules/leaflet.styl
+++ b/source/css/modules/leaflet.styl
@@ -192,8 +192,12 @@
   box-shadow 0 1px 4px rgba(0,0,0,0.25)
   border-radius 3px
   a
+    color #888
+    transition color 0.25s
     &:hover
       background-color #f4f4f4
+      color #444
+      transition color 0.25s
     &:first-child
       border-top-left-radius 3px
       border-top-right-radius 3px
@@ -216,7 +220,6 @@
   display block
   text-align center
   text-decoration none
-  color #888
 
 .leaflet-bar a,
 .leaflet-control-layers-toggle
