update nav styles

--- a/source/css/modules/nav.styl
+++ b/source/css/modules/nav.styl
@@ -34,7 +34,7 @@
 
 .sidebar__toggle
   position fixed
-  top 10px
+  top 15px
   right 0
   padding 6px 15px
   color $white
@@ -45,8 +45,11 @@
   &.open
     background none
 
+.breadcrumbs-active .sidebar__toggle.closed
+  top 67px
+
 .breadcrumbs-active .sidebar__toggle
-  top 62.5px
+  top 15px
 
 .sidebar__toggle--expand
   right 40px
