--- a/source/css/modules/search.styl
+++ b/source/css/modules/search.styl
@@ -3,11 +3,10 @@
 .search__container
   width 100%
   position relative
-  max-width 800px
   height 40px
 
 .search__overlay
-  background rgba($brand-dark, .7);
+  background rgba(#222, 0.5);
   position fixed
   top 0
   left 0
@@ -16,12 +15,15 @@
   z-index 1
 
 .search__input
-  border 1.5px solid $border
+  -moz-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
+  -webkit-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
+  -o-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
+  -ms-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
+  box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
   display block
   width 100%
   height 40px
   background white
-  box-shadow inset 0 0 2px #ddd
   float right
   padding 0
 
@@ -36,11 +38,17 @@
     transition width ease 300ms, border-radius 100ms ease 150ms
 
 .search__input input
-  padding 12px 15px
+  color $brand-dark-md
+  font-family 'acumin-pro', Helvetica, sans-serif
+  font-size 0.9em
+  padding 10px 15px 11px
   border none
+  border-radius 3px
   display block
   width 100%
-  border-radius 3px
+  
+  &::placeholder
+    letter-spacing 0.15em
 
   &:focus,
   &:active
