--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -60,6 +60,7 @@ aside table
 .sidebar__year-nav
   border 1px solid #fff
   border-width 0 0 1px 0
+  letter-spacing 0.1em
   -webkit-appearance none
   padding 3px 16px 3px 0
   color #fff
