sidebar links for regions and countries

--- a/source/css/modules/help_nav.styl
+++ b/source/css/modules/help_nav.styl
@@ -17,6 +17,10 @@
   box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
   color transparent
   text-decoration none
+  
+  .sidebar--open &
+    transition right 250ms ease-in-out
+    right calc(35% + 15px)
 
 .secondary-nav
   position fixed
