--- a/source/css/modules/leaflet.styl
+++ b/source/css/modules/leaflet.styl
@@ -53,6 +53,7 @@
     background #fff
     background rgba(255, 255, 255, 0.7)
     margin 0
+    display none
 
 .leaflet-tile,
 .leaflet-marker-icon,
