sidebar map links for strata

--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -332,3 +332,10 @@ aside table
       background darken($west-africa, 30%)
       color #fff
       border 1px solid darken($west-africa, 45%)
+      
+.sidebar__map-link
+  text-decoration none
+  color inherit
+  
+  &:hover
+    text-decoration underline
