update all styles

--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -16,6 +16,6 @@ $nav-margin = 40px
 $west-africa = #7163f0
 $eastern-africa = #ed7071
 $central-africa = #256ee4
-$southern-africa = #63cbc0
+$southern-africa = #38cebb
 
 $mobile-max = 800px
