--- a/source/css/modules/breadcrumb-nav.styl
+++ b/source/css/modules/breadcrumb-nav.styl
@@ -1,7 +1,7 @@
 .breadcrumb-nav
-  -webkit-box-shadow 2px 0px 5px rgba(0, 0, 0, 0.08)
-  -moz-box-shadow 2px 0px 5px rgba(0, 0, 0, 0.08)
-  box-shadow 2px 0px 5px rgba(0, 0, 0, 0.08)
+  -webkit-box-shadow 2px 0px 5px rgba(0, 0, 0, 0.2)
+  -moz-box-shadow 2px 0px 5px rgba(0, 0, 0, 0.2)
+  box-shadow 2px 0px 5px rgba(0, 0, 0, 0.2)
   position absolute
   top 0
   left 0
@@ -31,6 +31,7 @@
   vertical-align center
 
 .breadcrumb-nav__separator
+  color #999
   opacity .4
   font-size 13px
   transform translateY(-1px)
