--- a/source/css/modules/nav.styl
+++ b/source/css/modules/nav.styl
@@ -42,6 +42,11 @@
   &.closed
     background $brand-dark-md
     border-radius 3px 0 0 3px
+    transition all 0.3s
+    &:hover 
+      background darken($brand-dark-md, 15%)
+      padding-right 17px
+      transition all 0.3s
   &.open
     background none
 
