--- a/source/css/modules/typography.styl
+++ b/source/css/modules/typography.styl
@@ -11,12 +11,12 @@ body
 .small-heading
   text-transform uppercase
   letter-spacing 0.15em
-  font-size 12px
+  font-size 0.75em
 
 .small-current
   font-weight 700
   border-bottom 1px solid $white
-  padding-bottom 4px
+  padding-bottom 3px
 
 .indented
   text-indent 1em
