--- a/source/css/modules/help_nav.styl
+++ b/source/css/modules/help_nav.styl
@@ -3,6 +3,7 @@
   bottom 20px
   right 15px
   font-weight bold
+  opacity 0.85
   padding 10px 14px 7px 13px
   border-radius 50%
   line-height 1
@@ -17,6 +18,8 @@
   box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
   color transparent
   text-decoration none
+  &:hover
+    opacity 1
 
 .secondary-nav
   position fixed
