--- a/source/css/modules/search.styl
+++ b/source/css/modules/search.styl
@@ -54,34 +54,30 @@
   &:active
     outline 0
 
+  &:focus
+    .search__trigger
+      opacity 1
+
 .search__trigger
   position absolute
   top 0
   right 0
   width 40px
   height 40px
+  opacity 0.8
   cursor pointer
-
-.icon__magnifying-glass
-  position absolute
-  border 2.5px solid #888
-  border-radius 30px
-  width 14px
-  height 14px
-  display inline-block
-  right 10px
-  top 10px
-  cursor text
+  transition opacity 0.3s
+  &:hover
+    opacity 1
+    transition opacity 0.3s
   &:after
+    background url(/images/icon-search.svg) no-repeat 50% 50%
+    background-size 38%
     content ''
-    width 2.5px
-    height 8px
-    position absolute
-    top 8px
-    left -3px
-    transform rotate(45deg)
-    background #888
-
+    display inline-block
+    height 40px
+    width 40px
+  
 ::-webkit-input-placeholder
   text-transform uppercase
   letter-spacing 1px
