add guesses to total count

--- a/source/css/modules/total_count.styl
+++ b/source/css/modules/total_count.styl
@@ -3,7 +3,7 @@
   bottom 15px
   left 15px
   font-family 'acumin-pro-condensed', sans-serif
-  div
+  &__count
     font-weight bold
     font-size 70px
     margin-bottom 15px
@@ -18,8 +18,15 @@
     font-size 11px
     font-family 'acumin-pro', Helvetica, sans-serif
     padding 0 0.45em
+    margin-bottom 0.5em
 
 .total-count__plus-minus
   font-size 78%
   position relative
   bottom 5px
+
+.total-count__guesses
+  position relative
+  padding 0 0.3em
+  line-height 1
+  font-size 18px
