--- a/source/css/modules/about.styl
+++ b/source/css/modules/about.styl
@@ -1,24 +1,136 @@
-.about-title-container
-  display none
-  
-.about-logo
-  display block
+$about-sidebar-width = 35vw
+$about-content-width = 65vw
 
-.about-menu
-  width 20vw
+.about-container
+  position relative
+  display block
+  width 100%
+
+.about-sidebar
+  width $about-sidebar-width
   height 100%
-  position absolute
+  position fixed
   top 0
   left 0
+  border-right 1px solid #dddddd
+  padding 60px 30px
+
+  &__logo
+    width 100%
+    height 100px
+    margin 0 auto
+    background transparent no-repeat center center
+    background-size contain
+    text-align center
+    
+    &:after
+      content 'logo'
+
+  .about-menu
+    position static
+    
+    &__item
+      width 100%
+      
+      a
+        text-decoration none
+      
+      &.active
+        background #ddd
+  
+  &__actions
+    margin-top 30px
+      
+  
   
 .about-content
   position relative
-  width 80vw
+  width $about-content-width
   height 100%
-  margin-left 20vw
+  margin-left $about-sidebar-width
   overflow-y auto
+  padding 0 60px
   
   &__section
     position relative
     width 100%
-    height 100%
+    height auto
+    padding-bottom 60px
+    margin-bottom 60px
+    border-bottom 1px solid #dddddd
+    
+  h2
+    font-size 38px
+    margin 1em 0
+
+  h3
+    font-size 26px
+    margin 1em 0
+    
+  p
+    margin 1.5em 0
+  
+  a
+    text-decoration none
+    color #FF9701
+  
+
+.about-us, .partners-resources
+  &__link-grid
+    position relative
+    
+    &:after
+      display block
+      width 100%
+      height 0
+      content ''
+      clear both
+    
+    &__link
+      float left
+      width 33%
+      height 120px
+      background transparent no-repeat center center
+      background-size contain
+      text-align center
+      margin 30px 0
+      overflow hidden
+      text-overflow hidden
+      text-indent -9999px
+
+      &.iucn
+        background-image url(/images/IUCN-logo.png)
+      &.ssc
+        background-image url(/images/SSC-logo.png)
+      &.afesg
+        background-image url(/images/afesg-logo.png)
+        
+.partners-resources
+  &__link-grid
+    &__link
+      width 50%
+      
+      &.aef
+        background-image url(/images/AEF-logo.png)
+      &.awf
+        background-image url(/images/AWF-logo.png)
+      &.ste
+        background-image url(/images/STE-logo.png)
+      &.mike
+        background-image url(/images/MIKE-logo.png)
+      &.defra
+        background-image url(/images/DEFRA-logo.png)
+      &.tusk
+        background-image url(/images/Tusk-logo.png)
+      &.wwf
+        background-image url(/images/WWF-logo.png)
+      &.usfws
+        background-image url(/images/USFWS-logo.png)
+      &.asesg
+        background-image url(/images/AsESG-logo.png)
+      &.ec
+        background-image url(/images/EC-logo.png)
+      &.cites
+        background-image url(/images/CITES-logo.png)
+      &.solertium
+        background-image url(/images/solertium-logo.png)
