--- a/source/css/modules/map.styl
+++ b/source/css/modules/map.styl
@@ -7,11 +7,19 @@ $hover-fill-opacity = 0.25
   height 100%
   
 .leaflet-control-container
-  position relative
+  position absolute
+  width 100%
+  top auto !important
+  bottom 0
   z-index 1
 
-.main__container.breadcrumbs-active .leaflet-control-container
-  top 56px
+.leaflet-bottom .leaflet-control
+  margin-bottom 0
+  bottom 75px
+  right 8px
+
+// .main__container.breadcrumbs-active .leaflet-control-container
+//   top 56px
 
 .leaflet-marker-icon
   position relative
