--- a/source/css/modules/intro.styl
+++ b/source/css/modules/intro.styl
@@ -1,12 +1,91 @@
 .intro
+  color white
   position absolute
   top 0
   left 0
   width 100%
-  height 100%
-  background $southern-africa
-  color white
+  height 100vh
+  overflow hidden    
+  -webkit-animation intro-background linear 20s infinite 
+  animation intro-background linear 20s infinite
   
   &__title
     font-family 'Noe Display', Georgia, serif
     font-style normal
+    margin-bottom 2em 
+
+  .intro__container
+    margin 3.5em 3em 3em
+
+  .col-one-third
+    height 100%
+    float left
+    width 33.3%
+
+  .intro__title
+    font-size 4em
+    line-height 1
+    margin 0 auto
+
+  .intro__description
+    font-family 'acumin-pro', Helvetica, sans-serif
+    font-size 0.88em
+    font-weight 100
+    letter-spacing 0.015em
+    line-height 1.5
+    margin-bottom 1.5em
+    opacity 1
+    width 100%
+    p
+      margin-bottom 1em
+
+  .intro__loader
+    img
+      bottom 0
+      right 13%
+      position absolute
+      width 12%
+
+  button
+    background darken($central-africa, 30%)
+    border-radius 0.35em
+    font-size 0.65em
+    letter-spacing 0.25em
+    opacity 1
+    padding 1.75em
+    text-align center
+    text-transform uppercase
+    width 100%
+    transition background-color 0.3s
+    &:hover
+      background darken($central-africa, 50%)
+      transition background-color 0.3s
+
+  small
+    font-size 0.68em
+    letter-spacing 0.02em
+    opacity 0.7
+
+@-webkit-keyframes intro-background
+  0% 
+    background-color $southern-africa
+  25%
+    background-color $west-africa
+  50%
+    background-color $eastern-africa
+  75%
+    background-color $central-africa
+  100% 
+    background-color $southern-africa  
+
+@keyframes intro-background
+  0% 
+    background-color $southern-africa
+  25%
+    background-color $west-africa
+  50%
+    background-color $eastern-africa
+  75%
+    background-color $central-africa
+  100% 
+    background-color $southern-africa
