--- a/source/css/modules/total_count.styl
+++ b/source/css/modules/total_count.styl
@@ -1,21 +1,25 @@
 .total-count
+  background rgba(255,255,255,0.9)
   position fixed
-  bottom 15px
-  left 15px
+  bottom 0
+  left 0
   font-family 'acumin-pro-condensed', sans-serif
+  padding 0.5em 0.75em
   &__count
+    padding-left 0.05em
+    padding-top 0.45em
+    display block
     font-weight bold
-    font-size 70px
-    margin-bottom 15px
+    font-size 3.8em
+    margin-bottom 9px
     position relative
     bottom 10px
   small
-    background $white
-    display block
+    display inline-block
     text-transform uppercase
     letter-spacing 0.15em
-    color #666
-    font-size 11px
+    color #999
+    font-size 9.5px
     font-family 'acumin-pro', Helvetica, sans-serif
     padding 0 0.45em
     margin-bottom 0.5em
@@ -27,6 +31,8 @@
 
 .total-count__guesses
   position relative
-  padding 0 0.3em
+  padding 0.05em 0.3em 0
   line-height 1
-  font-size 18px
+  font-size 1.1em
+  letter-spacing 0.02em
+  text-transform uppercase
