--- a/source/css/modules/about.styl
+++ b/source/css/modules/about.styl
@@ -12,7 +12,7 @@ $about-content-width = 65vw
   position fixed
   top 0
   left 0
-  border-right 1px solid #dddddd
+  border-right 1px solid $gray-light
   padding 60px 30px
 
   &__logo
@@ -30,13 +30,23 @@ $about-content-width = 65vw
     position static
     
     &__item
+      border-top 1px solid $gray-lightest
+      font-size 0.95em
+      font-weight bold
       width 100%
+      &:hover
+        background $gray-lightest
+      &:last-child
+        border-bottom 1px solid $gray-lightest
       
       a
+        color $brand-dark-md
+        display block
+        padding 0.75em 0.5em
         text-decoration none
       
       &.active
-        background #ddd
+        background $gray-lightest
   
   &__actions
     margin-top 30px
@@ -44,12 +54,13 @@ $about-content-width = 65vw
   
   
 .about-content
+  font-size 0.95em
   position relative
   width $about-content-width
   height 100%
   margin-left $about-sidebar-width
   overflow-y auto
-  padding 0 60px
+  padding 30px 60px
   
   &__section
     position relative
@@ -73,6 +84,8 @@ $about-content-width = 65vw
   a
     text-decoration none
     color #FF9701
+    &:hover
+      text-decoration underline
   
 
 .about-us, .partners-resources
@@ -134,3 +147,11 @@ $about-content-width = 65vw
         background-image url(/images/CITES-logo.png)
       &.solertium
         background-image url(/images/solertium-logo.png)
+        
+.reports
+  .reports__list
+    &__item
+      a
+        display block
+      h4
+        float left
