--- a/source/css/modules/sidebar.styl
+++ b/source/css/modules/sidebar.styl
@@ -278,7 +278,7 @@ aside table
   background-color $brand-dark
   .sidebar__inner
     background-color transparent
-    background-image url('/assets/elephant.svg')
+    background-image url('/images/elephant-loader.gif')
     background-size 20%
     background-position center bottom
     background-repeat no-repeat
