add brand orange color

--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -3,6 +3,7 @@ $border-md = #C7CACB
 
 $brand-dark-md = #555555
 $brand-dark = #322F30
+$brand-orange = #ff9800
 
 $text-light = #848585
 $text-light-2 = #A1A2A2
