add confidence to sidebar

--- a/source/css/modules/intro.styl
+++ b/source/css/modules/intro.styl
@@ -46,7 +46,7 @@
       position absolute
       width 12%
 
-  button
+  button, .button
     background darken($central-africa, 30%)
     border-radius 0.35em
     font-size 0.65em
