darken box-shadow and add transition to about btn

--- a/source/css/modules/help_nav.styl
+++ b/source/css/modules/help_nav.styl
@@ -11,16 +11,17 @@
   font-size 20px
   background #fff url(/images/icon-about.svg) no-repeat 50% 50%
   background-size 32%
-  -moz-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
-  -webkit-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
-  -o-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
-  -ms-box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
-  box-shadow 0 0 6px rgba(0, 0, 0, 0.35)
+  -moz-box-shadow 0 0 6px rgba(0, 0, 0, 0.4)
+  -webkit-box-shadow 0 0 6px rgba(0, 0, 0, 0.4)
+  -o-box-shadow 0 0 6px rgba(0, 0, 0, 0.4)
+  -ms-box-shadow 0 0 6px rgba(0, 0, 0, 0.4)
+  box-shadow 0 0 6px rgba(0, 0, 0, 0.4)
   color transparent
   text-decoration none
-  
+  transition opacity 0.25s
   &:hover
     opacity 1
+    transition opacity 0.25s
   
   .sidebar--open &
     transition right 250ms ease-in-out
