add transparent bg to count labels

--- a/source/css/modules/total_count.styl
+++ b/source/css/modules/total_count.styl
@@ -15,6 +15,7 @@
     position relative
     bottom 10px
   small
+    background transparent
     display inline-block
     text-transform uppercase
     letter-spacing 0.15em
