beginning active class on about

--- a/source/css/modules/about.styl
+++ b/source/css/modules/about.styl
@@ -47,6 +47,7 @@ $about-content-width = 65vw
     position static
     
     &__item
+      position relative
       background $white
       border-top 1px solid $gray-lightest
       font-size 0.95em
