about page active state and close button

--- a/source/css/modules/about.styl
+++ b/source/css/modules/about.styl
@@ -28,6 +28,16 @@ $about-content-width = 65vw
   left 0
   border-right 1px solid $gray-light
   padding 60px 30px
+  
+  &__close
+    width 30px
+    height 30px
+    position absolute
+    top 15px
+    left 35px
+    background transparent url(/images/icon-close.svg) no-repeat center center
+    background-size contain
+    cursor pointer
 
   &__logo
     width 100%
