--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -11,6 +11,7 @@ $text-light-2 = #A1A2A2
 $white = #ffffff
 $gray-lightest = #f2f2f2
 $gray-light = #dddddd
+$gray-medium = #888888
 
 $nav-margin = 40px
 
