add fullwidth table styles

--- a/source/css/modules/continental_regional.styl
+++ b/source/css/modules/continental_regional.styl
@@ -39,3 +39,20 @@
   border-bottom 0 !important
   border-top 1px solid black !important
 
+.table-fullwidth
+  margin-bottom 4em
+  thead
+    border-bottom 2px solid $gray-light
+    th
+      color $brand-dark-md
+      padding-bottom 1em
+    .th-parent
+      color $gray-medium
+      font-size 0.75em
+      font-weight 600
+      letter-spacing 0.15em
+      text-transform uppercase
+  tbody tr 
+    border-bottom 1px solid $gray-lightest
+  .subgeography-totals__totals
+    border-top 2px solid $gray-light !important
